[package]
name = "chronos-scheduler-rs"
version = "1.0.1"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
description = "A Rust crate for Job Scheduler. This Job Scheduler is simple."
repository="https://github.com/j5ik2o/chronos-scheduler-rs"
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronos-parser-rs = "0.1.381"
ulid-generator-rs = "0.0.93"
once_cell = { version = "1.18.0" }
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.1"
